# GOAT

./: .gitignore  pyproject.toml
goat/: arxiv_ERM_ns.py  large_model.py  vq.py
